BUG#36749 Data Loss after Restore, if Trigger fired on the table that is being restored.

Backup kernel should lock all tables during restore but it was not doing so
for native drivers. This caused the MyISAM storage engine to return incorrect 
and loss of data when tables were being restored.

Note: This patch also fixes BUG#36778 and BUG#36782.